--- a/TestUnity.csproj
+++ b/TestUnity.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Assets\Script\Database\InteractCommandDatabase.cs" />
     <Compile Include="Assets\Script\Database\NonPlayerDatabase.cs" />
     <Compile Include="Assets\Script\Database\PropObjectDatabase.cs" />
+    <Compile Include="Assets\Script\Database\ScenarioPhaseDatabase.cs" />
     <Compile Include="Assets\Script\Database\StageDatabase.cs" />
     <Compile Include="Assets\Script\Helper\JsonHelper.cs" />
     <Compile Include="Assets\Script\Helper\MathHelper.cs" />
@@ -124,6 +125,7 @@
     <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventSetStringValue.cs" />
     <Compile Include="Assets\Script\MainGame\CommonIntegerAndString.cs" />
     <Compile Include="Assets\Script\MainGame\CommonVector3Builder.cs" />
+    <Compile Include="Assets\Script\MainGame\ITransfer.cs" />
     <Compile Include="Assets\Script\MainGame\InteractCommandBuilder.cs" />
     <Compile Include="Assets\Script\MainGame\InteractCommandManager.cs" />
     <Compile Include="Assets\Script\MainGame\InteractCommands.cs" />
@@ -144,15 +146,21 @@
     <Compile Include="Assets\Script\MainGame\MainGameState.cs" />
     <Compile Include="Assets\Script\MainGame\MainGameStringBuilder.cs" />
     <Compile Include="Assets\Script\MainGame\MonoGameInput.cs" />
+    <Compile Include="Assets\Script\MainGame\MonoScenarioScene.cs" />
     <Compile Include="Assets\Script\MainGame\MonoSelectPanel.cs" />
     <Compile Include="Assets\Script\MainGame\NonPlayerManager.cs" />
     <Compile Include="Assets\Script\MainGame\PlayerStageManager.cs" />
     <Compile Include="Assets\Script\MainGame\PropObjectManager.cs" />
+    <Compile Include="Assets\Script\MainGame\ScenarioGameState.cs" />
+    <Compile Include="Assets\Script\MainGame\ScenarioPhaseBuilder.cs" />
+    <Compile Include="Assets\Script\MainGame\ScenarioPhaseManager.cs" />
+    <Compile Include="Assets\Script\MainGame\ScenarioPhases\ScenarioPhaseWaitTime.cs" />
     <Compile Include="Assets\Script\MainGame\TriggerManager.cs" />
     <Compile Include="Assets\Script\MainGame\ValueManager.cs" />
+    <Compile Include="Assets\Script\Miscs\MainTransfer.cs" />
+    <Compile Include="Assets\Script\Miscs\MonoScreenCover.cs" />
     <Compile Include="Assets\Script\Test\MonoGameKernalTest.cs" />
     <Compile Include="Assets\Script\Test\TestJson.cs" />
-    <Compile Include="Assets\Script\TestBehavior.cs" />
     <Compile Include="Assets\Script\TextMap\TextMap.cs" />
     <Compile Include="Assets\Script\UI\MonoSizeCopy.cs" />
     <Compile Include="Assets\Script\UI\MonoTypewriter.cs" />
@@ -175,6 +183,7 @@
     <None Include="Assets\Resources\Database\PropObject.txt" />
     <None Include="Assets\Resources\Database\Stage.txt" />
     <None Include="Assets\Resources\InteractCommand\InteractCommand.txt" />
+    <None Include="Assets\Resources\ScenarioPhase\ScenarioPhase.txt" />
     <None Include="Assets\Resources\TextMap\TextMap.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
