Add Scenario Dev Scene

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -128,6 +128,7 @@
      <Compile Include="Assets\Script\Miscs\MainTransfer.cs" />
      <Compile Include="Assets\Script\Miscs\MonoScreenCover.cs" />
      <Compile Include="Assets\Script\Test\MonoGameKernalTest.cs" />
+     <Compile Include="Assets\Script\Test\MonoScenarioTest.cs" />
      <Compile Include="Assets\Script\Test\TestJson.cs" />
      <Compile Include="Assets\Script\TextMap\TextMap.cs" />
      <Compile Include="Assets\Script\UI\MonoSizeCopy.cs" />
