--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -150,6 +150,7 @@
      <Compile Include="Assets\ThirdParty\LitJson\ParserToken.cs" />
      <None Include="Assets\Resources\InteractCommand\InteractCommand.txt" />
      <None Include="Assets\Resources\CommonEvent\TestCommonEvent.txt" />
+     <None Include="Assets\Shader\ToonShader.shader" />
      <None Include="Assets\Resources\CommonEvent\CommonEvent.txt" />
      <None Include="Assets\Resources\Database\PropObject.txt" />
      <None Include="Assets\Resources\ScenarioPhase\ScenarioPhase.txt" />
