--- a/TestUnity.csproj
+++ b/TestUnity.csproj
@@ -190,6 +190,7 @@
     <None Include="Assets\Resources\InteractCommand\InteractCommand.txt" />
     <None Include="Assets\Resources\ScenarioPhase\ScenarioPhase.txt" />
     <None Include="Assets\Resources\TextMap\TextMap.txt" />
+    <None Include="Assets\Shader\ToonShader.shader" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
