--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -93,6 +93,7 @@
      <Compile Include="Assets\PostProcessing\Utilities\CustomMotionTexture\ExampleWheelController.cs" />
      <Compile Include="Assets\Script\Database\CommonEventDatabase.cs" />
      <Compile Include="Assets\Script\Database\InteractCommandDatabase.cs" />
+     <Compile Include="Assets\Script\Database\InventoryDatabase.cs" />
      <Compile Include="Assets\Script\Database\NonPlayerDatabase.cs" />
      <Compile Include="Assets\Script\Database\PropObjectDatabase.cs" />
      <Compile Include="Assets\Script\Database\ScenarioPhaseDatabase.cs" />
@@ -153,12 +154,14 @@
      <Compile Include="Assets\Script\MainGame\InteractCommands\InteractCommandWait.cs" />
      <Compile Include="Assets\Script\MainGame\InteractGameState.cs" />
      <Compile Include="Assets\Script\MainGame\InteractView.cs" />
+     <Compile Include="Assets\Script\MainGame\InventoryManager.cs" />
      <Compile Include="Assets\Script\MainGame\MainGameCameraController.cs" />
      <Compile Include="Assets\Script\MainGame\MainGameCommandBuilder.cs" />
      <Compile Include="Assets\Script\MainGame\MainGameCommandManager.cs" />
      <Compile Include="Assets\Script\MainGame\MainGameIntegerBuilder.cs" />
      <Compile Include="Assets\Script\MainGame\MainGameState.cs" />
      <Compile Include="Assets\Script\MainGame\MainGameStringBuilder.cs" />
+     <Compile Include="Assets\Script\MainGame\MainGameView.cs" />
      <Compile Include="Assets\Script\MainGame\MonoGameInput.cs" />
      <Compile Include="Assets\Script\MainGame\MonoScenarioScene.cs" />
      <Compile Include="Assets\Script\MainGame\MonoSelectPanel.cs" />
@@ -231,6 +234,7 @@
      <None Include="Assets\PostProcessing\Resources\Shaders\TAA.cginc" />
      <None Include="Assets\PostProcessing\Resources\Shaders\EyeAdaptation.cginc" />
      <None Include="Assets\PostProcessing\Resources\Shaders\GrainGen.shader" />
+     <None Include="Assets\Resources\Database\Inventory.txt" />
      <None Include="Assets\PostProcessing\Resources\Shaders\FXAA.shader" />
      <None Include="Assets\Resources\Database\Stage.txt" />
      <None Include="Assets\PostProcessing\Resources\Shaders\DiskKernels.cginc" />
