--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -162,6 +162,7 @@
      <Compile Include="Assets\Script\MainGame\MainGameState.cs" />
      <Compile Include="Assets\Script\MainGame\MainGameStringBuilder.cs" />
      <Compile Include="Assets\Script\MainGame\MainGameView.cs" />
+     <Compile Include="Assets\Script\MainGame\MenuView.cs" />
      <Compile Include="Assets\Script\MainGame\MonoGameInput.cs" />
      <Compile Include="Assets\Script\MainGame\MonoScenarioScene.cs" />
      <Compile Include="Assets\Script\MainGame\MonoSelectPanel.cs" />
