--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -138,6 +138,7 @@
      <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventNonPlayerSetDialog.cs" />
      <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventNonPlayerSetScenario.cs" />
      <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventPredicate.cs" />
+     <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventRemoveInventory.cs" />
      <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventSetIntValue.cs" />
      <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventSetStringValue.cs" />
      <Compile Include="Assets\Script\MainGame\CommonIntegerAndString.cs" />
