--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -139,6 +139,9 @@
      <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventNonPlayerSetPosition.cs" />
      <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventNonPlayerSetScenario.cs" />
      <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventPredicate.cs" />
+     <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventPropObjectSetDialog.cs" />
+     <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventPropObjectSetPosition.cs" />
+     <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventPropObjectSetScenario.cs" />
      <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventRemoveInventory.cs" />
      <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventSetIntValue.cs" />
      <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventSetStringValue.cs" />
