--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -159,6 +159,7 @@
      <Compile Include="Assets\Script\MainGame\InteractCommands\InteractCommandGroup.cs" />
      <Compile Include="Assets\Script\MainGame\InteractCommands\InteractCommandMessage.cs" />
      <Compile Include="Assets\Script\MainGame\InteractCommands\InteractCommandNonPlayerFace.cs" />
+     <Compile Include="Assets\Script\MainGame\InteractCommands\InteractCommandSave.cs" />
      <Compile Include="Assets\Script\MainGame\InteractCommands\InteractCommandSelect.cs" />
      <Compile Include="Assets\Script\MainGame\InteractCommands\InteractCommandWait.cs" />
      <Compile Include="Assets\Script\MainGame\InteractGameState.cs" />
