--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -98,6 +98,7 @@
      <Compile Include="Assets\Script\Database\PropObjectDatabase.cs" />
      <Compile Include="Assets\Script\Database\ScenarioPhaseDatabase.cs" />
      <Compile Include="Assets\Script\Database\StageDatabase.cs" />
+     <Compile Include="Assets\Script\GameApp\GeneralDialogView.cs" />
      <Compile Include="Assets\Script\GameApp\SaveLoadSystem.cs" />
      <Compile Include="Assets\Script\GameApp\SaveLoadView.cs" />
      <Compile Include="Assets\Script\Helper\JsonHelper.cs" />
