Add result common event

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -147,6 +147,7 @@
      <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventPropObjectSetPosition.cs" />
      <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventPropObjectSetScenario.cs" />
      <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventRemoveInventory.cs" />
+     <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventResult.cs" />
      <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventSetIntValue.cs" />
      <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventSetStringValue.cs" />
      <Compile Include="Assets\Script\MainGame\CommonIntegerAndString.cs" />
