--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -99,6 +99,7 @@
      <Compile Include="Assets\Script\Database\ScenarioPhaseDatabase.cs" />
      <Compile Include="Assets\Script\Database\StageDatabase.cs" />
      <Compile Include="Assets\Script\GameApp\GeneralDialogView.cs" />
+     <Compile Include="Assets\Script\GameApp\ResultScene.cs" />
      <Compile Include="Assets\Script\GameApp\SaveLoadSystem.cs" />
      <Compile Include="Assets\Script\GameApp\SaveLoadView.cs" />
      <Compile Include="Assets\Script\GameApp\TitleScene.cs" />
