--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -197,6 +197,7 @@
      <Compile Include="Assets\Script\MainGame\ScenarioPhases\ScenarioPhasePlayAnimatin.cs" />
      <Compile Include="Assets\Script\MainGame\ScenarioPhases\ScenarioPhaseSerial.cs" />
      <Compile Include="Assets\Script\MainGame\ScenarioPhases\ScenarioPhaseSetPosition.cs" />
+     <Compile Include="Assets\Script\MainGame\ScenarioPhases\ScenarioPhaseStageAnimation.cs" />
      <Compile Include="Assets\Script\MainGame\ScenarioPhases\ScenarioPhaseWaitTime.cs" />
      <Compile Include="Assets\Script\MainGame\TriggerManager.cs" />
      <Compile Include="Assets\Script\MainGame\ValueManager.cs" />
