--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -152,6 +152,7 @@
      <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventPropObjectSetDialog.cs" />
      <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventPropObjectSetPosition.cs" />
      <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventPropObjectSetScenario.cs" />
+     <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventPropObjectSetup.cs" />
      <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventRemoveInventory.cs" />
      <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventResult.cs" />
      <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventSetIntValue.cs" />
