--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -160,6 +160,7 @@
      <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventResult.cs" />
      <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventSetIntValue.cs" />
      <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventSetStringValue.cs" />
+     <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventStageAnimation.cs" />
      <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventSwap.cs" />
      <Compile Include="Assets\Script\MainGame\CommonIntegerAndString.cs" />
      <Compile Include="Assets\Script\MainGame\CommonVector3Builder.cs" />
