--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -214,6 +214,8 @@
      <Compile Include="Assets\Script\MainGame\TriggerManager.cs" />
      <Compile Include="Assets\Script\MainGame\ValueManager.cs" />
      <Compile Include="Assets\Script\Miscs\MainTransfer.cs" />
+     <Compile Include="Assets\Script\Miscs\MonoAnimationDrive.cs" />
+     <Compile Include="Assets\Script\Miscs\MonoDummyEmit.cs" />
      <Compile Include="Assets\Script\Miscs\MonoFinalGrassAnim.cs" />
      <Compile Include="Assets\Script\Miscs\MonoScreenCover.cs" />
      <Compile Include="Assets\Script\Test\MonoGameKernalTest.cs" />
