--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -177,6 +177,7 @@
      <Compile Include="Assets\Script\MainGame\InteractCommands\InteractCommandAnimation.cs" />
      <Compile Include="Assets\Script\MainGame\InteractCommands\InteractCommandCommonEvent.cs" />
      <Compile Include="Assets\Script\MainGame\InteractCommands\InteractCommandDialog.cs" />
+     <Compile Include="Assets\Script\MainGame\InteractCommands\InteractCommandGetInv.cs" />
      <Compile Include="Assets\Script\MainGame\InteractCommands\InteractCommandGroup.cs" />
      <Compile Include="Assets\Script\MainGame\InteractCommands\InteractCommandMessage.cs" />
      <Compile Include="Assets\Script\MainGame\InteractCommands\InteractCommandNonPlayerFace.cs" />
